# readbooks-organizer

./: README.md  setup.cfg
data/: read.xlsx
src/: etl.py  main.py  models.py  routes.py  utils.py  visualizer.py
