[metadata]
name = read_books_organizer
version = 0.1.0
description = A brief description of your project
author = Marcello De Giorgi
author_email = degiorgimarcello@gmail.com
url = https://github.com/DeGiorgiMarcello/readbooks-organizer
license = MIT

[options]
install_requires = 
    fastapi[all]
    pymongo
    pandas